2008-05-22  Petr Stehlik  <pstehlik@sophics.cz>
* cpu_m68k.asm: made linkable (missing cim_encountered and rts_handler).
  Surprisingly it is working (ATARI BASIC READY) eventhough it is 5 years
  outdated and needs many changes to be in sync with cpu.c again.

* cpu_m68k.S: made compilable and linkable. It even sort of works but
  fails before reaching the ATARI BASIC READY prompt :-( The conversion
  is still not correct but debugging it is hard...


2008-05-21  Petr Stehlik  <pstehlik@sophics.cz>
* atari_x11.c: removed "-fps" support, use "-showspeed" instead
* USAGE, atari800.man: updated wrt. removed "-fps"
* cpu_m68k.S: added fresh conversion of 5 years outdated cpu_m68k.asm
* configure.ac: default LDFLAGS will be without the "-s" (strip binary)
  since package maintainers don't like autostriping of the debug symbols.


2008-05-20  Petr Stehlik  <pstehlik@sophics.cz>
* .asm->.S: Devpac syntax of asm files converted to gcc one
* gst2gcc: removed, no longer needed
* Makefike.in: updated for compiling/assembling the .S files
* atari_falcon.c: corrected include path to "falcon.h"
* atari.c: corrected C++-ism (my old gcc 2.91 didn't like it)
* DOC/INSTALL.falcon updated (an optimized rebuild script added)


2008-05-15  Perry McFarlane  <perry_m@fastmail.fm>
* rdevice.[ch] atari.c configure.ac: Windows support for R: device.
* USAGE: added record/playback


2008-05-14  Perry McFarlane  <perry_m@fastmail.fm>
* input.c: stdlib for exit()


2008-05-13  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: nonlinear mixing minor fix
* input.[ch], configure.ac, pokey.c, atari.c, TODO: event recording


2008-05-11  Perry McFarlane  <perry_m@fastmail.fm>
* dos/atari_vga.c, configure.ac: Atari_PaletteUpdate
* win32/sound.c, pokeysnd.h SND_STEREO removed (obsolete)


2008-05-10  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, pokeymix.inc: use shorts for smaller file size with table


2008-05-09  Perry McFarlane  <perry_m@fastmail.fm>